--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ body{
     box-shadow: 0 0 1rem rgba(0,0,0,0.3);
     font-size: 15vmin;
     background-color: #ffffc5;
+    justify-content: center;
+    align-items: center;
 }
 #reset_btn{
 padding: 1rem;
