--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     box-shadow: 0 0 1rem rgba(0,0,0,0.3);
     font-size: 15vmin;
     background-color: #ffffc5;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
